fix: a step name

--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -48,9 +48,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: install Rust toolchain
+      - name: check the site is ok
         run: |
-          if [ $(curl -LI http://google.com -o /dev/null -w '%{http_code}\n' -s) == "200"  ]; then echo 0; fi
+          "curl -L ${{ steps.deployment.outputs.page_url }}"
 
 
   deploy:
