feat: include build stuff into the `.gitignore`

--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -30,15 +30,15 @@ jobs:
 
       - name: archive artifact
         shell: bash
-        run: |
-          tar \
-            --dereference --hard-dereference \
-            --directory "$PWD" \
-            -cvf "$PWD/github-pages" \
-            --exclude=.git \
-            --exclude=.github \
-            --exclude=.target \
-            .
+        run: >
+          tar
+          --dereference --hard-dereference
+          --directory "$PWD"
+          -cvf "$PWD/github-pages"
+          --exclude=.git
+          --exclude=.github
+          --exclude=.target
+          .
       - name: upload artifact
         uses: actions/upload-artifact@main
         with:
