--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -18,7 +18,7 @@ jobs:
       - name: install `wkhtmltopdf` tool
         run: |
           wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.focal_amd64.deb
-          yes |dpkg -i wkhtmltox_0.12.6-1.focal_amd64.deb
+          yes |sudo dpkg -i wkhtmltox_0.12.6-1.focal_amd64.deb
 
       - name: checkout repository
         uses: actions/checkout@v3
