fix: typo inside the `build_site` workflow file
There was a typo during the `archive artifacts` step hence resulting
archive has included the whole 'target' directory.

--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -48,8 +48,9 @@ jobs:
           -cvf "$PWD/github-pages"
           --exclude=.git
           --exclude=.github
-          --exclude=.target
+          --exclude=target
           .
+
       - name: upload artifact
         uses: actions/upload-artifact@main
         with:
