--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -60,8 +60,8 @@ jobs:
           .
 
       - name: upload artifact
-        #uses: actions/upload-artifact@v4
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v4
+        #uses: actions/upload-pages-artifact@v2
         with:
           name: github-pages
           path: github-pages
