--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -17,60 +17,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  #  build:
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - name: install Rust toolchain
-  #        run: |
-  #          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs > rustup.sh
-  #          sh rustup.sh -y
-  #          rustup --version
-  #
-  #      - name: install and switch to rustup's nightly toolchain
-  #        run: |
-  #          rustup toolchain install nightly
-  #          rustup run nightly rustc --version
-  #          rustup default nightly
-  #
-  #      - name: install `wkhtmltopdf` tool
-  #        run: |
-  #          wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.focal_amd64.deb
-  #          sudo apt-get install -y ./wkhtmltox_0.12.6-1.focal_amd64.deb
-  #
-  #      - name: checkout repository
-  #        uses: actions/checkout@v3
-  #
-  #      - name: build and run the program
-  #        run: |
-  #          cargo run --release
-  #          ls -altr
-  #
-  #      - name: archive artifact
-  #        shell: bash
-  #        run: >
-  #          tar
-  #          -cvf github-pages
-  #          --dereference
-  #          --hard-dereference
-  #          --exclude=.git
-  #          --exclude=.github
-  #          --exclude=target
-  #          --exclude=github-pages
-  #          -C "$PWD"
-  #          .
-  #
-  #      - name: upload artifact
-  #        uses: actions/upload-artifact@v4
-  #        #uses: actions/upload-pages-artifact@v2
-  #        with:
-  #          name: github-pages
-  #          path: github-pages
-
-  deploy:
-    #needs: build
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: install Rust toolchain
@@ -119,18 +66,24 @@ jobs:
           name: github-pages
           path: github-pages
 
-      - name: deploy to github pages
-        id: deployment
-        uses: actions/deploy-pages@v3
-
   test:
     # Stub for future unit/integration tests applied to the binary or
     # generated site itself
-    needs: deploy
+    needs: build
     runs-on: ubuntu-latest
     steps:
-
       - name: check the site is ok
         run: |
           curl -L enkron.github.io
           echo "GITHUB_SHA=$GITHUB_SHA"
+
+  deploy:
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: deploy to github pages
+        id: deployment
+        uses: actions/deploy-pages@v3
