--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -18,7 +18,7 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: install Rust toolchain
         run: |
@@ -33,8 +33,8 @@ jobs:
 
       - name: install `wkhtmltopdf` tool
         run: |
-          curl -sSfLO https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.focal_amd64.deb
-          sudo apt-get install -y ./wkhtmltox_0.12.6-1.focal_amd64.deb
+          curl -sSfLO https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.jammy_amd64.deb
+          sudo apt-get install -y ./wkhtmltox_0.12.6-1.jammy_amd64.deb
 
       - name: checkout repository
         uses: actions/checkout@v4
