chore(actions): add --no-install-recommends CLI flag

--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -34,7 +34,7 @@ jobs:
       - name: install `wkhtmltopdf` tool
         run: |
           sudo apt-get update
-          sudo apt-get install -y wkhtmltopdf
+          sudo apt-get install -y --no-install-recommends wkhtmltopdf
 
       - name: checkout repository
         uses: actions/checkout@v4
