feat(ci): add real unit tests instead of the stub
1. Removed needs: build dependency - test job now runs in parallel with build (faster CI)
2. Installs Rust toolchain - proper setup for running tests
3. Runs actual unit tests - cargo test --release --verbose (currently 7 tests)
4. Deploy still requires both jobs - needs: [build, test] ensures tests must pass before deployment

The CI will now fail if any unit tests fail, catching issues before deployment.

--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -65,15 +65,18 @@ jobs:
           path: github-pages
 
   test:
-    # Stub for future unit/integration tests applied to the binary or
-    # generated site itself
-    needs: build
     runs-on: ubuntu-22.04
     steps:
-      - name: check the site is ok
+      - name: install Rust toolchain
         run: |
-          #curl -L enkron.github.io
-          echo "GITHUB_SHA=$GITHUB_SHA"
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -qy
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
+      - name: checkout repository
+        uses: actions/checkout@v4
+
+      - name: run unit tests
+        run: cargo test --release --verbose
 
   deploy:
     needs: [build, test]
