feat(site): use WebAssembly for all dark mode logic
WASM module loaded as an ES6 module that initializes automatically on page load.

New WASM Module (src/lib.rs):
- Dark mode functionality written in Rust
- Compiles to ~20KB WASM binary
- Handles theme initialization, toggling, and localStorage persistence

Updated Configuration:
- Cargo.toml: Added wasm-bindgen and web-sys dependencies, configured hybrid binary/library crate
- Makefile: Now builds WASM before generating site
- .gitignore: Excludes generated web/pkg/ directory

Updated Templates (src/rend.rs):
- Removed inline JavaScript from header and footer
- Added ES6 module loader for WASM in footer
- Toggle button remains in navigation

CI/CD (.github/workflows/build_site.yml):
- Added wasm-pack installation step
- Added WASM build step before site generation

Documentation (CLAUDE.md):
- Added dark mode feature section
- Updated module structure and dependencies
- Added WASM build commands

Benefits of WASM Approach

- Type-safe: Rust compiler catches errors at compile time
- Performance: Near-native execution, no JS parsing overhead
- Code reuse: Same language as the site generator
- Binary size: Efficient ~20KB bundle

--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -25,6 +25,10 @@ jobs:
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs |sh -s -- -qy
           rustup --version
 
+      - name: install wasm-pack
+        run: |
+          curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+
       #- name: install and switch to rustup's nightly toolchain
       #  run: |
       #    rustup toolchain install nightly
@@ -33,6 +37,10 @@ jobs:
 
       - name: checkout repository
         uses: actions/checkout@v4
+
+      - name: build WASM module
+        run: |
+          wasm-pack build --target web --out-dir web/pkg
 
       - name: build and run the program
         run: |
