--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,4 @@ regex = "1"
 
 # WASM dependencies
 wasm-bindgen = "0.2.95"
-web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Storage", "Window"] }
+web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Storage", "Window", "MediaQueryList", "EventTarget"] }
