--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ pulldown-cmark = "0.9.2"
 once_cell = "1"
 sha2 = "0.10"
 regex = "1"
+clap = { version = "4", features = ["derive"] }
 
 # WASM dependencies
 wasm-bindgen = "0.2.95"
