--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ clap = { version = "4", features = ["derive"] }
 # WASM dependencies
 wasm-bindgen = "0.2.95"
 web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Storage", "Window", "MediaQueryList", "EventTarget"] }
+
+[dev-dependencies]
+tempfile = "3"
