feat: add browser-side encryption for entries
Implement AES-256-GCM + Argon2id encryption system with client-side decryption:

- Add crypto module with AES-256-GCM authenticated encryption
- Implement Argon2id key derivation (64MB, 3 iter, 4 threads)
- Add browser WASM decryption with lock/unlock UI
- Refactor CLI: separate 'lock' command for encrypt/decrypt operations
- Support inline HTML in decrypted content (timestamps, formatting)
- No passphrase required at build time (encrypted files embedded as-is)
- Add lockfile tracking for encrypted entries (.enkronio-locks)
- Filter build pipeline to process only .md and .enc files

CLI changes:
- 'add <title>' - create entry (no encryption)
- 'lock <path>' - encrypt existing .md file
- 'lock --unlock <path>' - decrypt .enc file

Security: Random salt/nonce per encryption, memory-hard KDF, authenticated encryption

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ cv.html
 github-pages.tar
 public/
 pub/
+priv/
 downloads/
 download/
 web/pkg/
+
+# Encryption lockfile (tracks encrypted entries)
+.enkronio-locks
